[package]
name = "samplerate"
version = "0.2.4"
authors = ["Frederick Gnodtke <frederick@gnodtke.net>"]
readme = "README.md"
categories = ["multimedia::audio"]
description = "A library based on libsamplerate for converting samplerates"
repository = "https://github.com/Prior99/rust-samplerate"
keywords = ["audio", "samplerate"]
license = "BSD-2-Clause"

[dependencies]
libsamplerate-sys = { git = "https://github.com/divanshu-go/libsamplerate-sys.git", rev = "8eae8e5d07d3639e32ec90b355b215ac7a1c7453" }

[dev-dependencies]
hound = "3.4"
rstest = "0.6"
